# Sentence_Level_Context_Reduction_Engine

./: .gitignore  BENCHMARK_REPORT.md  README.md  SCRE_DEEPDIVE.html  WORKFLOW_EXAMPLE.md  dashboard.py  pyproject.toml
data/: agent_bench_answers.txt  agent_bench_questions.txt  bench_answers.txt  bench_questions.txt  code_analysis_agent.md  code_challenger_agent.md  code_implement_agent.md  code_interpret_agent.md  estimator_agent.md  new_sample.txt  new_test2.txt  requirement_Agent.md  requirements.txt  reviewer_agent.md  sample.txt  sdlc_project_benchmark.txt  test3.txt  test_pipe.txt  tester_agent.md
scre/: __init__.py  query_aware_reducer.py  scre_answer_engine.py  scre_pipeline.py
tests/: __init__.py  benchmark_history.json  benchmark_results.csv  benchmark_results.json  benchmark_v2.py  check_reduction.py  qa_dataset.py  scre_eval.py  test_scre_story.py  unified_benchmark.py  verify_ollama.py
